# Femur_Modeling

./: .gitignore  CMakeLists.txt  README.md  Remark.md
include/: Femur.hpp  HelloWorld.hpp  femur.hpp  linalg.hpp  neuralNetwork.hpp  neuralNetworkFunctions.hpp
ressources/: DLbook.md
src/: femur.cpp  linalg.cpp  main.cpp  neuralNetwork.cpp  neuralNetworkFunctions.cpp
tests/: testFemur.cpp  testLinalgMatrix.cpp  testLinalgVector.cpp  testNNFunctions.cpp  testNeuralNetwork.cpp  testNeuralNetworkLoadConstructor.cpp
visualization/: README.md  requirements.txt  visualizer.py
